<resources>
    <string name="app_name">AR-Localization</string>
    <string name="description_fab_floor_plan">Button to create a new Floor Plan</string>
    <string name="ar_fab_place">Place</string>
    <string name="ar_fab_confirm">Confirm</string>
    <string name="ar_fab_hosting">Hosting</string>
    <string name="ar_fab_resolve">Resolve</string>
    <string name="ar_fab_new_anchor">New Anchor</string>
    <string name="new_anchor_dialog_input_hint">Location description (ex. Room-Number)</string>
    <string name="new_anchor_dialog_title">Add new Cloud Anchor</string>
    <string name="new_anchor_dialog_info">Enter a name for the cloud anchor \nThis can be used to search while localizing</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_new_anchor_text_error">Please enter a text first!</string>
    <string name="new_floor_plan_dialog_title">Create a new Floor Plan</string>
    <string name="new_floor_plan_dialog_info">Set the name and description for the new floor plan</string>
    <string name="new_floor_plan_dialog_input_name_hint">Name of the floor plan</string>
    <string name="new_floor_plan_dialog_input_info_hint">Additional info of the floor plan</string>
    <string name="dialog_new_floor_plan_error">Please enter a name first</string>
    <string name="floor_plan_button_update">Update</string>
    <string name="floor_plan_button_localize">Localize</string>
    <string name="floor_plan_button_delete">Delete</string>
    <string name="terms_of_use_arcore">This application runs on <a href="https://play.google.com/store/apps/details?id=com.google.ar.core">Google Play Services for AR</a> (ARCore), which is provided by Google and governed by the <a href="https://policies.google.com/privacy">Google Privacy Policy.</a></string>
    <string name="terms_of_use_cloud_anchor">To power this session, Google will process sensor data (e.g. camera and location). <a href="https://support.google.com/ar?p=how-google-play-services-for-ar-handles-your-data">Learn more</a></string>
    <string name="terms_of_use">Terms of use</string>

    <string name="firebase_web_client_id" translatable="false">897985463940-n826u221dloahnh6s7afgc1evhf1fnnh.apps.googleusercontent.com</string>
    <string name="floorPlan_list_item_owner">Owner ✓</string>
    <string name="update_floor_plan_dialog_title">Update the Floor Plan</string>
    <string name="update_floor_plan_dialog_hint">Change name or description of the selected floor plan</string>
    <string name="new_anchor_dialog_input_floor_hint">On what floor is the anchor</string>
    <string name="ar_localizing_bottom_sheet_title_collapsed">Use Geospatial to find anchors near you,\nor swipe up to select manually instead</string>
    <string name="ar_localizing_bottom_sheet_title_expanded">Select an anchor that seems close to you to resolve\nEither use the list, map icon or select a floor if available</string>
    <string name="ar_localizing_bottom_sheet_title_tracking">Successfully resolved the anchor: %1$s.\nWhile holding the camera in a tracked area, your position will be calculated</string>
    <string name="ar_localizing_bottom_sheet_title_resolving">Trying to resolve anchors around you \nMove your phone around and point the camera at your surroundings</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_floor">By floor</string>
    <string name="sort_by_distance">By distance</string>
    <string name="sort_by_created">By time created</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_sort">Sort</string>
    <string name="ar_mapping_instructions_geospatial">Scan an area with available street view until all accuracy readings above show green</string>
    <string name="ar_mapping_instructions_place_anchor">Place anchor on floor</string>
    <string name="ar_mapping_instructions_scan_anchor">Walk around the anchor for good accuracy until its green</string>
    <string name="ar_mapping_instructions_mapping">Walk around while pointing your phone around, and place new anchors every few meters</string>
    <string name="hint_configure_simultaneous_resolves_while_tracking"># Tracking resolves</string>
    <string name="hint_configure_simultaneous_resolves_on_selection"># Selection resolves</string>
    <string name="ar_localizing_currently_resolved">TRACKING: %1$s</string>
    <string name="select_floor_dialog_title">Select Floor to resolve</string>
    <string name="ar_localization_anchor_list_title">Tap on anchor to resolve:</string>
    <string name="hint_configure_tracking_interval">Tracking Interval</string>
    <string name="dialog_delete_floor_plan_title">Delete floor plan</string>
    <string name="dialog_delete_floor_plan_message">Are you sure you want to delete this floor plan?</string>
    <string name="test_start">Start Test</string>
    <string name="test_finish">Finish Test</string>
    <string name="anchor_tracking_interval_hint">Log Interval:</string>
    <string name="anchor_tracking_distance_hint">Distance between Anchors:</string>
    <string name="settings">Settings</string>
    <string name="setting_logging">Logging</string>
    <string name="setting_anchor_tracking_test">Anchor Tracking Test</string>

</resources>