<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/floor_plan_list_search"
        android:title="@string/menu_item_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/floor_plan_list_sort_by"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/menu_item_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_floor_plans_by_name"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/sort_floor_plans_by_distance"
                android:title="@string/sort_by_distance" />
            <item
                android:id="@+id/sort_floor_plans_by_created"
                android:title="@string/sort_by_created" />
        </menu>
    </item>
</menu>